--- a/index.ipynb
+++ b/index.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,9 +57,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "type": "bar",
+         "x": [
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
+         ],
+         "y": [
+          2891000,
+          2800000,
+          2581000
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"4be07449-b069-44e1-98b0-7c7f4d6664c5\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"4be07449-b069-44e1-98b0-7c7f4d6664c5\", [{\"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"4be07449-b069-44e1-98b0-7c7f4d6664c5\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"4be07449-b069-44e1-98b0-7c7f4d6664c5\", [{\"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import plotly\n",
     "\n",
@@ -80,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,11 +154,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "city_indices = None\n",
+    "city_indices = list(range(len(cities)))\n",
     "city_indices # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]"
    ]
   },
@@ -128,9 +182,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Buenos Aires',\n",
+       " 'Toronto',\n",
+       " 'Pyeongchang',\n",
+       " 'Marakesh',\n",
+       " 'Albuquerque',\n",
+       " 'Los Cabos',\n",
+       " 'Greenville',\n",
+       " 'Archipelago Sea',\n",
+       " 'Walla Walla Valley',\n",
+       " 'Salina Island',\n",
+       " 'Solta',\n",
+       " 'Iguazu Falls']"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "city_names = ['Buenos Aires',\n",
     " 'Toronto',\n",
@@ -143,7 +219,8 @@
     " 'Walla Walla Valley',\n",
     " 'Salina Island',\n",
     " 'Solta',\n",
-    " 'Iguazu Falls']"
+    " 'Iguazu Falls']\n",
+    "city_names"
    ]
   },
   {
@@ -155,23 +232,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1. Buenos Aires',\n",
+       " '2. Toronto',\n",
+       " '3. Pyeongchang',\n",
+       " '4. Marakesh',\n",
+       " '5. Albuquerque',\n",
+       " '6. Los Cabos',\n",
+       " '7. Greenville',\n",
+       " '8. Archipelago Sea',\n",
+       " '9. Walla Walla Valley',\n",
+       " '10. Salina Island',\n",
+       " '11. Solta',\n",
+       " '12. Iguazu Falls']"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "names_and_ranks = [] \n",
+    "names_and_ranks = []\n",
+    "for index in city_indices:\n",
+    "    names_and_ranks.append(f\"{index + 1}. {city_names[index]}\")\n",
+    "names_and_ranks\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. Buenos Aires\n",
+      "2. Toronto\n",
+      "12. Iguazu Falls\n"
+     ]
+    }
+   ],
    "source": [
-    "names_and_ranks[0] # '1. Buenos Aires'\n",
-    "names_and_ranks[1] # '2. Toronto'\n",
-    "names_and_ranks[-1] # '12. Iguazu Falls'"
+    "print(names_and_ranks[0]) # '1. Buenos Aires'\n",
+    "print(names_and_ranks[1]) # '2. Toronto'\n",
+    "print(names_and_ranks[-1]) # '12. Iguazu Falls'"
    ]
   },
   {
@@ -183,11 +295,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 155,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2891000,\n",
+       " 2800000,\n",
+       " 2581000,\n",
+       " 928850,\n",
+       " 559277,\n",
+       " 287651,\n",
+       " 84554,\n",
+       " 60000,\n",
+       " 32237,\n",
+       " 4000,\n",
+       " 1700,\n",
+       " 0]"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "city_populations = []"
+    "city_populations = []\n",
+    "for city in cities:\n",
+    "     city_populations.append(city['Population']) \n",
+    "city_populations"
    ]
   },
   {
