automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -322,7 +322,7 @@
    ],
    "source": [
     "city_populations = []\n",
-    "for ci\n",
+    "for cities in \n",
     "city_populations"
    ]
   },
