automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -322,7 +322,8 @@
    ],
    "source": [
     "city_populations = []\n",
-    "for index in \n",
+    "for index in cities\n",
+    "    city\n",
     "city_populations"
    ]
   },
