--- a/index.ipynb
+++ b/index.ipynb
@@ -323,7 +323,7 @@
    "source": [
     "city_populations = []\n",
     "for index in cities\n",
-    "    city_population.append\n",
+    "    city_populations.append\n",
     "city_populations"
    ]
   },
