--- a/index.ipynb
+++ b/index.ipynb
@@ -323,7 +323,7 @@
    "source": [
     "city_populations = []\n",
     "for index in cities\n",
-    "    city_populations.append(city_names).\n",
+    "    city_populations.append(city\n",
     "city_populations"
    ]
   },
