--- a/index.ipynb
+++ b/index.ipynb
@@ -295,35 +295,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[2891000,\n",
-       " 2800000,\n",
-       " 2581000,\n",
-       " 928850,\n",
-       " 559277,\n",
-       " 287651,\n",
-       " 84554,\n",
-       " 60000,\n",
-       " 32237,\n",
-       " 4000,\n",
-       " 1700,\n",
-       " 0]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-10-f1636b47d9f7>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-f1636b47d9f7>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    for index in cities\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
     "city_populations = []\n",
     "for index in cities\n",
-    "    city_populations.append(index()\n",
+    "    city_populations.append(index(\"populations\"))\n",
     "city_populations"
    ]
   },
