--- a/index.ipynb
+++ b/index.ipynb
@@ -310,7 +310,7 @@
    "source": [
     "city_populations = []\n",
     "for index in cities:\n",
-    "    city_populations.append(index(\"population\"))\n",
+    "    city_populations.append(index{}\"population\"))\n",
     "city_populations"
    ]
   },
