--- a/index.ipynb
+++ b/index.ipynb
@@ -322,7 +322,8 @@
    ],
    "source": [
     "city_populations = []\n",
-    "for city \n",
+    "for city in cities\n",
+    "    city_populations.append\n",
     "city_populations"
    ]
   },
