automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -295,22 +295,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-22-8dc92e376623>, line 3)",
+     "evalue": "invalid syntax (<ipython-input-23-d5a59b34663c>, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-22-8dc92e376623>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    city_populations.append(city.['Populations'])\u001b[0m\n\u001b[0m                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-23-d5a59b34663c>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    city_populations\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "city_populations = []\n",
     "for city in cities:\n",
-    "    city_populations.append(city.['Populations'])\n",
+    "    city_populations.append(city(['Populations'])\n",
     "city_populations"
    ]
   },
