--- a/index.ipynb
+++ b/index.ipynb
@@ -323,7 +323,7 @@
    "source": [
     "city_populations = []\n",
     "for city in cities:\n",
-    "    city_populations.append(city['Population'])\n",
+    "    city_popul\n",
     "city_populations"
    ]
   },
