--- a/index.ipynb
+++ b/index.ipynb
@@ -322,8 +322,7 @@
    ],
    "source": [
     "city_populations = []\n",
-    "for city in cities:\n",
-    "    city_populations.append(city['Population'])\n",
+    "for city in citi\n",
     "city_populations"
    ]
   },
