automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -322,7 +322,8 @@
    ],
    "source": [
     "city_populations = []\n",
-    "for city in citi\n",
+    "for city in cities:\n",
+    "    city_population.append(city['Popula'])\n",
     "city_populations"
    ]
   },
