--- a/index.ipynb
+++ b/index.ipynb
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
        " 0]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
    "source": [
     "city_populations = []\n",
     "for city in cities:\n",
-    "    city_populations.append\n",
+    "    city_populations.append(city['Population'])\n",
     "city_populations"
    ]
   },
