--- a/index.ipynb
+++ b/index.ipynb
@@ -329,14 +329,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2891000\n",
+      "2800000\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "print city_populations[0] # 2891000\n",
-    "city_populations[1] # 2800000\n",
+    "print(city_populations[0]) # 2891000\n",
+    "print(city_populations[1]) # 2800000\n",
     "city_populations[-1] # 0"
    ]
   },
