automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -337,24 +337,15 @@
      "output_type": "stream",
      "text": [
       "2891000\n",
-      "2800000\n"
+      "2800000\n",
+      "60000\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "print(city_populations[0]) # 2891000\n",
     "print(city_populations[1]) # 2800000\n",
-    "city_populations[-1] # 0"
+    "print(city_populations[6]) # 0"
    ]
   },
   {
