--- a/index.ipynb
+++ b/index.ipynb
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
     }
    ],
    "source": [
-    "print(city(city_populations[2]) # 2891000\n",
+    "print(city_populations[2]) # 2891000\n",
     "print(city_populations[3]) # 2800000\n",
     "print(city_populations[4]) # 0"
    ]
