--- a/index.ipynb
+++ b/index.ipynb
@@ -322,7 +322,8 @@
    ],
    "source": [
     "city_populations = []\n",
-    "for citis i\n",
+    "for city in cities:\n",
+    "    \n",
     "city_populations"
    ]
   },
