--- a/index.ipynb
+++ b/index.ipynb
@@ -323,7 +323,7 @@
    "source": [
     "city_populations = []\n",
     "for city in cities:\n",
-    "    \n",
+    "    city_populations.append(ci)\n",
     "city_populations"
    ]
   },
