automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -364,7 +364,7 @@
     "trace_population = {'x': names_and_ranks, \n",
     "                     'y': city_populations, \n",
     "                     'type': 'bar', \n",
-    "                    \n",
+    "                    'text': names_and_ranks\n",
     "                     'name': 'populations'}"
    ]
   },
