automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -361,8 +361,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trace_population = {'x': names_and_ranks, \n",
-    "                     'y': city_populations, \n",
+    "trace_population = {'y': names_and_ranks, \n",
+    "                     'x': city_populations, \n",
     "                     'type': 'bar', \n",
     "                    'text': names_and_ranks,\n",
     "                     'name': 'populations'}"
