automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -357,13 +357,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-86-e6679e401319>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-86-e6679e401319>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    'type': 'bar'}\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "trac_population = {'x': names_and_ranks, \n",
     "                     'y': city_populations,\n",
-    "                     'text': names_and_rank  \n",
+    "                     'text': names_and_ranks  \n",
     "                     'type': 'bar'}"
    ]
   },
