automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -363,7 +363,8 @@
    "source": [
     "trac_population = {'x': names_and_ranks, \n",
     "                     'y': city_populations,\n",
-    "                     'text': names_and_ranks,  \n",
+    "                     'text': names_and_ranks,\n",
+    "                     'name':\n",
     "                     'type': 'bar'}"
    ]
   },
