automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -469,7 +469,8 @@
    "outputs": [],
    "source": [
     "city_areas = []\n",
-    "for city in cities\n"
+    "for city in cities:\n",
+    "    "
    ]
   },
   {
